# audio-jacobian-lens

./: .dockerignore  .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  pyproject.toml
data/: chatterbox_fit_prompts.jsonl  static_explorer_catalog_v2.json  static_explorer_provenance_v2.json  static_public_reports_v1.json  static_showcase_candidates.json
deploy/huggingface/: README.md
docker/: entrypoint.sh
docs/: CAUSAL_TRACE.md  CHATTERBOX.md  HOSTING.md  METHODOLOGY.md  MLX_LFM.md  PILOT_RESULTS.md  PUBLISHING.md  README.md  STATIC_SHOWCASE_CURATION.md
docs/experiments/: CHATTERBOX_T3_PILOT.md  LFM_VERTICAL_SLICE.md  PHONETIC_SIGNATURES.md  README.md  (+3 more)
jlens/: __init__.py  analysis_queue.py  audio_io.py  causal_whisper_cli.py  chatterbox_fitting.py  chatterbox_server.py  chatterbox_webapp.py  cross_lens.py  evaluate_whisper_cli.py  fit_chatterbox_cli.py  fit_mlx_cli.py  fit_whisper_cli.py  hooks.py  mlx_analysis.py  mlx_chatterbox.py  mlx_fitting.py  mlx_lfm.py  mlx_webapp.py  phonetic_signatures.py  projected_lens.py  static_explorer_catalog.py  webapp.py  whisper.py  whisper_analysis.py  whisper_causal.py  whisper_fitting.py  whisper_lens.py
samples/: README.md  samples.json
scripts/: export_static_explorer.py  export_static_tts_explorer.py  make_macos_tts_corpus.py  materialize_static_audio_samples.py  publish_static_asr_replay.py  publish_static_phone_steering.py  record_whisper_phone_steering_explorer.py  validate_static_explorer_site.py
tests/: test_analysis_queue.py  test_audio_io.py  test_causal_whisper_cli.py  test_chatterbox_fitting.py  test_chatterbox_webapp.py  test_cross_lens.py  test_docker_entrypoint.py  test_materialize_static_audio_samples.py  test_mlx_analysis.py  test_mlx_chatterbox.py  test_mlx_fitting.py  test_mlx_webapp.py  test_phone_signature_frontend.py  test_phonetic_signatures.py  test_projected_lens.py  test_publish_static_asr_replay.py  test_publish_static_phone_steering.py  test_record_whisper_phone_steering_explorer.py  test_repository_readmes.py  test_showcase_examples.py  test_static_explorer_catalog.py  test_static_explorer_export.py  test_static_phone_steering.py  test_static_public_reports.py  test_static_site_validator.py  test_static_tts_explorer_export.py  test_steering_frontend.py  test_webapp.py  test_whisper_causal.py  test_whisper_fitting.py  test_whisper_hf_adapter.py  test_whisper_utils.py  tiny_whisper.py
web/: README.md  app.js  causal.html  causal.js  chatterbox.html  chatterbox.js  index.html  showcase.css  showcase.html  showcase.js  steering.html  styles.css  workspace-nav.js
(+2 files in other folders)
